[package]
name = "fhe-math"
description = "Mathematical utilities for the fhe.rs library"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
fhe-traits = { version = "^0.1.0-beta.4", path = "../fhe-traits" }
fhe-util = { version = "^0.1.0-beta.4", path = "../fhe-util" }

crypto-bigint.workspace = true
itertools.workspace = true
ndarray.workspace = true
num-bigint.workspace = true
num-bigint-dig.workspace = true
num-traits.workspace = true
protobuf.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
zeroize.workspace = true
sha2.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
hexl-rs = {git = "https://github.com/Janmajayamall/hexl-rs.git", branch = "main"}

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[features]
simd = []

[[bench]]
name = "zq"
harness = false

[[bench]]
name = "rq"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "rns"
harness = false
